be: add and autho search orders