@@ -9,6 +9,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.Customizer;
+import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -29,7 +30,8 @@ import lombok.experimental.NonFinal;
 
 @Configuration
 @RequiredArgsConstructor
-@EnableWebSecurity
+@EnableWebSecurity(debug = true)
+@EnableGlobalMethodSecurity(prePostEnabled = true)
 @EnableWebMvc
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class WebSecurityConfig {
@@ -44,89 +46,84 @@ public class WebSecurityConfig {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http.csrf(AbstractHttpConfigurer::disable)
                 .addFilterBefore(jwtTokenFilter, UsernamePasswordAuthenticationFilter.class)
-                .authorizeHttpRequests(request -> {
-                    request.requestMatchers(
-                                    String.format("%s/users/register", apiPrefix),
-                                    String.format("%s/users/login", apiPrefix))
-                            .permitAll()
-                            // spotless:off
-                            .requestMatchers(GET,
-                                    String.format("%s/roles**", apiPrefix)).permitAll()
+                .authorizeHttpRequests(request -> request.requestMatchers(
+                                String.format("%s/users/register", apiPrefix),
+                                String.format("%s/users/login", apiPrefix))
+                        .permitAll()
+                        // spotless:off
+                        .requestMatchers(GET,
+                                String.format("%s/roles**", apiPrefix)).permitAll()
 
-                            .requestMatchers(GET,
-                                    String.format("%s/categories**", apiPrefix)).permitAll()
+                        .requestMatchers(GET,
+                                String.format("%s/categories**", apiPrefix)).permitAll()
 
-                            .requestMatchers(GET,
-                                    String.format("%s/categories/**", apiPrefix)).permitAll()
+                        .requestMatchers(GET,
+                                String.format("%s/categories/**", apiPrefix)).permitAll()
 
-                            .requestMatchers(POST,
-                                    String.format("%s/categories/**", apiPrefix)).hasAnyRole(Role.ADMIN)
+                        .requestMatchers(POST,
+                                String.format("%s/categories/**", apiPrefix)).hasAnyRole(Role.ADMIN)
 
-                            .requestMatchers(PUT,
-                                    String.format("%s/categories/**", apiPrefix)).hasAnyRole(Role.ADMIN)
+                        .requestMatchers(PUT,
+                                String.format("%s/categories/**", apiPrefix)).hasAnyRole(Role.ADMIN)
 
-                            .requestMatchers(DELETE,
-                                    String.format("%s/categories/**", apiPrefix)).hasAnyRole(Role.ADMIN)
+                        .requestMatchers(DELETE,
+                                String.format("%s/categories/**", apiPrefix)).hasAnyRole(Role.ADMIN)
 
-                            .requestMatchers(GET,
-                                    String.format("%s/products**", apiPrefix)).permitAll()
+                        .requestMatchers(GET,
+                                String.format("%s/products**", apiPrefix)).permitAll()
 
-                            .requestMatchers(GET,
-                                    String.format("%s/products/**", apiPrefix)).permitAll()
+                        .requestMatchers(GET,
+                                String.format("%s/products/**", apiPrefix)).permitAll()
 
-                            .requestMatchers(GET,
-                                    String.format("%s/products/images/*", apiPrefix)).permitAll()
+                        .requestMatchers(GET,
+                                String.format("%s/products/images/*", apiPrefix)).permitAll()
 
-                            .requestMatchers(POST,
-                                    String.format("%s/products**", apiPrefix)).hasAnyRole(Role.ADMIN)
+                        .requestMatchers(POST,
+                                String.format("%s/products**", apiPrefix)).hasAnyRole(Role.ADMIN)
 
-                            .requestMatchers(PUT,
-                                    String.format("%s/products/**", apiPrefix)).hasAnyRole(Role.ADMIN)
+                        .requestMatchers(PUT,
+                                String.format("%s/products/**", apiPrefix)).hasAnyRole(Role.ADMIN)
 
-                            .requestMatchers(DELETE,
-                                    String.format("%s/products/**", apiPrefix)).hasAnyRole(Role.ADMIN)
+                        .requestMatchers(DELETE,
+                                String.format("%s/products/**", apiPrefix)).hasAnyRole(Role.ADMIN)
 
-                            .requestMatchers(POST,
-                                    String.format("%s/orders/**", apiPrefix)).hasAnyRole(Role.USER)
+                        .requestMatchers(POST,
+                                String.format("%s/orders/**", apiPrefix)).hasAnyRole(Role.USER)
 
-                            .requestMatchers(GET,
-                                    String.format("%s/orders/**", apiPrefix)).permitAll()
+                        .requestMatchers(GET,
+                                String.format("%s/orders/**", apiPrefix)).permitAll()
 
-                            .requestMatchers(PUT,
-                                    String.format("%s/orders/**", apiPrefix)).hasRole(Role.ADMIN)
+                        .requestMatchers(PUT,
+                                String.format("%s/orders/**", apiPrefix)).hasRole(Role.ADMIN)
 
-                            .requestMatchers(DELETE,
-                                    String.format("%s/orders/**", apiPrefix)).hasRole(Role.ADMIN)
+                        .requestMatchers(DELETE,
+                                String.format("%s/orders/**", apiPrefix)).hasRole(Role.ADMIN)
 
-                            .requestMatchers(POST,
-                                    String.format("%s/order_details/**", apiPrefix)).hasAnyRole(Role.USER)
+                        .requestMatchers(POST,
+                                String.format("%s/order_details/**", apiPrefix)).hasAnyRole(Role.USER)
 
-                            .requestMatchers(GET,
-                                    String.format("%s/order_details/**", apiPrefix)).permitAll()
+                        .requestMatchers(GET,
+                                String.format("%s/order_details/**", apiPrefix)).permitAll()
 
-                            .requestMatchers(PUT,
-                                    String.format("%s/order_details/**", apiPrefix)).hasRole(Role.ADMIN)
+                        .requestMatchers(PUT,
+                                String.format("%s/order_details/**", apiPrefix)).hasRole(Role.ADMIN)
 
-                            .requestMatchers(DELETE,
-                                    String.format("%s/order_details/**", apiPrefix)).hasRole(Role.ADMIN)
+                        .requestMatchers(DELETE,
+                                String.format("%s/order_details/**", apiPrefix)).hasRole(Role.ADMIN)
 
-                            // spotless:on
-                            .anyRequest()
-                            .authenticated();
-                });
+                        // spotless:on
+                        .anyRequest()
+                        .authenticated());
 
-        http.cors(new Customizer<CorsConfigurer<HttpSecurity>>() {
-            @Override
-            public void customize(CorsConfigurer<HttpSecurity> httpSecurityCorsConfigurer) {
-                CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOrigins(List.of("*"));
-                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-                configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
-                configuration.setExposedHeaders(List.of("x-auth-token"));
-                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-                source.registerCorsConfiguration("/**", configuration);
-                httpSecurityCorsConfigurer.configurationSource(source);
-            }
+        http.cors((Customizer<CorsConfigurer<HttpSecurity>>) httpSecurityCorsConfigurer -> {
+            CorsConfiguration configuration = new CorsConfiguration();
+            configuration.setAllowedOrigins(List.of("*"));
+            configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+            configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
+            configuration.setExposedHeaders(List.of("x-auth-token"));
+            UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+            source.registerCorsConfiguration("/**", configuration);
+            httpSecurityCorsConfigurer.configurationSource(source);
         });
 
         return http.build();
